<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

  <androidx.preference.SeekBarPreference
    android:key="@string/time_limit_key"
    android:title="@string/time_limit_title"
    android:summary="@string/time_limit_summary"
    android:max="10"
    android:defaultValue="@integer/time_limit_default"/>

  <androidx.preference.SeekBarPreference
    android:key="@string/num_digits_key"
    android:title="@string/num_digits_title"
    android:summary="@string/num_digits_summary"
    android:max="4"
    android:defaultValue="@integer/num_digits_default"/>


  <androidx.preference.SeekBarPreference
    android:key="@string/game_time_key"
    android:title="@string/game_time_title"
    android:summary="@string/game_time_summary"
    android:max="300"
    android:defaultValue="@integer/game_time_default"/>

</androidx.preference.PreferenceScreen>